[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/02_scenes/02_Characters/01_Player/02_Camera/Camera2D.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="FrequencyTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FrequencyTimer" to="." method="_on_FrequencyTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
